mc-pod-success.yml
apiVersion: v1
kind: Pod
metadata:
  name: mc-pod-success
spec:
  containers:
  - image: nginx
    name: nginx-1
    ports:
    - containerPort: 80
  - name: node-api
    image: ravi2krishna/nodejs-api
    ports:
    - containerPort: 8080
