mc-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mc-pod
spec:
  containers:
  - image: nginx
    name: nginx-1
    ports:
    - containerPort: 80
  - name: nginx-2
    image: nginx
    ports:
    - containerPort: 80
