dev-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecomm
  namespace: dev
  labels:
    app: ecomm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecomm
  template:
    metadata:
      labels:
        app: ecomm
    spec:
      containers:
      - name: ecomm
        image: ravi2krishna/ecomm:dev
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ecomm-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: ecomm
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
