lms-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
---
# db postgres service 
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  type: ClusterIP # Optional
  selector:
    component: postgres
  ports:
    - port: 5432

---
# backend deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lms-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lms-be
  template:
    metadata:
      labels:
        app: lms-be
    spec:
      containers:
        - name: backend-container
          image: ravi2krishna/lms-be
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
# be-service.yml
apiVersion: v1
kind: Service
metadata:
  name: lms-be-service
spec:
  type: LoadBalancer
  ports:
  - port: 3000
  selector:
    app: lms-be
