prod-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login
spec:
  replicas: 2
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      containers:
      - name: login
        image: pulipatitejashwini/webapp
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: login-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: login
